--- a/client/src/assets/css/About.css
+++ b/client/src/assets/css/About.css
@@ -1,13 +1,13 @@
-.cont {
+.conts {
     height: 90.3vh;
 }
 
-.cont .cc {
+.conts .cc {
     display: flex;
     justify-content: center;
 }
 
-.cont .heading {
+.conts .heading {
     padding: 10px;
     width: 40%;
     height: 10vh;
@@ -18,7 +18,7 @@
     border-radius: 10px;
 }
 
-.cont .heading h2 {
+.conts .heading h2 {
     color: rgb(172, 26, 0);
     text-align: center;
     font-size: 30px;
