--- a/client/src/admin/style/style.css
+++ b/client/src/admin/style/style.css
@@ -2,9 +2,11 @@
     position: absolute;
     top: 56px;
     left: 14.3em;
+    width: 85%;
     height: 92vh;
     overflow: scroll;
 }
-.admin-container::-webkit-scrollbar{
+
+.admin-container::-webkit-scrollbar {
     display: none;
 }
