--- a/client/src/admin/components/Button/FormButton/FormButton.css
+++ b/client/src/admin/components/Button/FormButton/FormButton.css
@@ -1,4 +1,4 @@
-.formbtn Button{
+/* .formbtn Button{
    margin: 10px 0;
    background-color: red;
    height: 3em;
@@ -6,4 +6,4 @@
 }
 :where(.css-dev-only-do-not-override-1okl62o).ant-btn-primary:not(:disabled):not(.ant-btn-disabled):hover{
    background-color: rgba(255, 0, 0, 0.47);
-}
+} */
